--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -1,6 +1,12 @@
 name: Pre-release
 
 on:
+  commit:
+    branches: [ player_Speedup ]
+    paths-ignore:
+      - '*.md'
+      - '*.json'
+      - '**/wcokey.txt'
   workflow_dispatch:
 
 concurrency: 
